# LlamaCpp.Bindings

./: .gitignore  CLAUDE.md  LlamaCpp.Bindings.slnx  README.md
data/profiles/: llama-3.2-1B.profile.json  qwen3-0.6B.profile.json  qwen3-1.7B-per-layer.profile.json  qwen3-1.7B.profile.json  qwen3-4B.profile.json
data/recipes/: qwen3-1.7B.current-leader.json  qwen3-1.7B.current-leader.meta.json
docs/: diagram_rendering_investigation.md  differential_test_investigation.md  getting-started.md  llama_server_parity_checklist.md  mtmd_investigation.md  native-binaries.md  prefix_reuse_investigation.md  samples.md  server_parity_checklist.md  troubleshooting.md  updating-llama-cpp.md  webui_feature_checklist.md  webui_parity_investigation.md  webui_screenshot_gaps.md
docs/development_process/: handoff_multimodal.md  kickoff.md  llama_server_parity_checklist.md  server_parity_checklist.md
docs/investigations/: asan_investigation.md  qwen3_qk_sensitivity.md  sensitivity_sweep_perf.md
imagery/: llama_hero.xcf  llama_scientist.xcf
samples/Imatrix.Cli/: Imatrix.Cli.csproj  Program.cs
samples/LlamaChat/: App.axaml  App.axaml.cs  LlamaChat.csproj  Program.cs  ViewLocator.cs  app.manifest
samples/LlamaChat.Cli/: LlamaChat.Cli.csproj  Program.cs
samples/Perplexity.Cli/: Perplexity.Cli.csproj  (+1 more)
tools/: analyze-sensitivity-vs-heuristic.py  check-for-updates.sh  diff-against-llama-completion.sh  diff-api.py  dump-struct-sizes.c  dump-struct-sizes.sh  extract-api.py  fetch-binaries.py  fetch-test-models.py  run-tests-asan.sh  setup-venv.sh  struct-sizes.json  xref-bindings.py
tools/native-shims/: CMakeLists.txt  build.sh  llamashim.cpp
(+411 files in other folders)
